--- a/WorldOfTheThreeKingdomsEditor/MainWindow.xaml
+++ b/WorldOfTheThreeKingdomsEditor/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WorldOfTheThreeKingdomsEditor"
         mc:Ignorable="d"
-        Title="中华三国志剧本编辑器" Height="720" Width="1280">
+        Title="中華三國志劇本編輯器" Height="720" Width="1280">
     <Window.CommandBindings>
         <CommandBinding Command="Open" Executed="OpenCommandBinding_Executed"/>
         <CommandBinding Command="Save" Executed="SaveCommandBinding_Executed"/>
@@ -15,44 +15,37 @@
     </Window.CommandBindings>
     <DockPanel>
         <Menu DockPanel.Dock="Top">
-            <MenuItem Header="档案">
-                <MenuItem Header="读取剧本" Command="Open" InputGestureText="Ctrl+O"/>
-                <MenuItem Header="储存劇本" Command="Save" InputGestureText="Ctrl+S"/>
+            <MenuItem Header="檔案">
+                <MenuItem Header="讀取劇本" Command="Open" InputGestureText="Ctrl+O"/>
+                <MenuItem Header="儲存劇本" Command="Save" InputGestureText="Ctrl+S"/>
                 <Separator/>
-                <MenuItem Header="更新 Scenarios.json" Click="btnSyncScenario_Click"/>
+                <MenuItem Header="更新Scenarios.json" Click="btnSyncScenario_Click"/>
                 <Separator/>
                 <MenuItem Header="退出" Click="btnQuit_Click"/>
             </MenuItem>
-            <MenuItem Header="编辑">
+            <MenuItem Header="編輯">
                 <!--<MenuItem IsCheckable="true" Header="包含標題" IsChecked="true" Checked="MenuItem_IncludeTitle_Checked" Unchecked="MenuItem_IncludeTitle_Unchecked"/>-->
-                <MenuItem Header="复制" Command="Copy" InputGestureText="Ctrl+C"/>
-                <MenuItem Header="粘贴" Command="Paste" InputGestureText="Ctrl+V"/>
-                <MenuItem Header="删除" Command="Delete"/>
+                <MenuItem Header="複製" Command="Copy" InputGestureText="Ctrl+C"/>
+                <MenuItem Header="貼上" Command="Paste" InputGestureText="Ctrl+V"/>
+                <MenuItem Header="刪除" Command="Delete"/>
             </MenuItem>
             <MenuItem Header="功能">
-                <MenuItem Header="新增势力" Click="btnNewFaction_Click"/>
-                <MenuItem Header="新增随机角色" Click="btnNewPerson_Click" IsEnabled="False"/>
+                <MenuItem Header="新增勢力" Click="btnNewFaction_Click"/>
+                <MenuItem Header="新增隨機武將" Click="btnNewPerson_Click" IsEnabled="False"/>
                 <Separator/>
-                <MenuItem Header="随机化人物相性" Click="btnRandomizeIdeal_Click"/>
-                <MenuItem Header="随机化人物性格" Click="btnRandomizePersonality_Click"/>
-                <MenuItem Header="随机化人物寿命" Click="btnRandomizeDeadYear_Click"/>
-                <MenuItem Header="随机化登场地点" Click="btnRandomizeAvailableLocation_Click"/>
+                <MenuItem Header="隨機化武將相性" Click="btnRandomizeIdeal_Click"/>
+                <MenuItem Header="隨機化武將性格" Click="btnRandomizePersonality_Click"/>
+                <MenuItem Header="隨機化武將壽命" Click="btnRandomizeDeadYear_Click"/>
+                <MenuItem Header="隨機化武將登場地點" Click="btnRandomizeAvailableLocation_Click"/>
                 <Separator/>
-                <MenuItem Header="删除所有势力外交关系" Click="btnDeleteAllDiplomacy_Click"/>
+                <MenuItem Header="刪除所有勢力外交關係" Click="btnDeleteAllDiplomacy_Click"/>
                 <Separator/>
-                <MenuItem Header="重新设置城池连接" Click="btnRedoArchitectureLinks_Click"/>
+                <MenuItem Header="重新設置城池連接" Click="btnRedoArchitectureLinks_Click"/>
             </MenuItem>
 			<MenuItem Header="语言">
+                <!--<MenuItem IsCheckable="true" Header="包含標題" IsChecked="true" Checked="MenuItem_IncludeTitle_Checked" Unchecked="MenuItem_IncludeTitle_Unchecked"/>-->
                 <MenuItem IsCheckable="false" Header="简体中文" IsChecked="true"/>
             </MenuItem>
-			<!--
-			<MenuItem Header="帮助">
-                <MenuItem Header="版本资讯" Click="btnVersionInfo_Click"/>
-            </MenuItem>
-			-->
-			<!--
-			<MenuItem IsCheckable="true" Header="包含標題" IsChecked="true" Checked="MenuItem_IncludeTitle_Checked" Unchecked="MenuItem_IncludeTitle_Unchecked"/>
-			-->
         </Menu>
         <StatusBar DockPanel.Dock="Bottom">
             <StatusBarItem>
@@ -60,14 +53,13 @@
             </StatusBarItem>
         </StatusBar>
         <TabControl x:Name="tabControl" Margin="10,10,10,10">
-            <TabItem Header="人物">
+            <TabItem Header="武將">
                 <Grid Background="#FFE5E5E5">
                     <DataGrid x:Name="dgPerson" AlternationCount="2" AutoGeneratingColumn="CharTabHeaderDisplay">
 						<DataGrid.ContextMenu>
 							<ContextMenu>
 								<MenuItem Header="编辑"/>
 								<MenuItem Header="刪除" Command="Delete"/>
-								<Separator/>
 								<MenuItem Header="退出" Click="btnQuit_Click">
 								</MenuItem>
 							</ContextMenu>
@@ -101,7 +93,7 @@
 					</DataGrid>
                 </Grid>
             </TabItem>
-            <TabItem Header="父亲">
+            <TabItem Header="父親">
                 <Grid Background="#FFE5E5E5">
                     <DataGrid x:Name="dgFatherId" AlternationCount="2">
 						<DataGrid.ColumnHeaderStyle>
@@ -130,7 +122,7 @@
 					</DataGrid>
                 </Grid>
             </TabItem>
-            <TabItem Header="母亲">
+            <TabItem Header="母親">
                 <Grid Background="#FFE5E5E5">
                     <DataGrid x:Name="dgMotherId" AlternationCount="2">
 						<DataGrid.ColumnHeaderStyle>
@@ -195,7 +187,7 @@
                 </Grid>
             </TabItem>
             -->
-            <TabItem Header="城池">
+            <TabItem Header="建築">
                 <Grid Background="#FFE5E5E5">
                     <DataGrid x:Name="dgArchitecture" AlternationCount="2">
 						<DataGrid.ColumnHeaderStyle>
@@ -224,7 +216,7 @@
 					</DataGrid>
                 </Grid>
             </TabItem>
-            <TabItem Header="势力">
+            <TabItem Header="勢力">
                 <Grid Background="#FFE5E5E5">
                     <DataGrid x:Name="dgFaction" AlternationCount="2">
 						<DataGrid.ColumnHeaderStyle>
@@ -253,7 +245,7 @@
 					</DataGrid>
                 </Grid>
             </TabItem>
-            <TabItem Header="编队">
+            <TabItem Header="編隊">
                 <Grid Background="#FFE5E5E5">
                     <DataGrid x:Name="dgMilitary" AlternationCount="2">
 						<DataGrid.ColumnHeaderStyle>
@@ -282,7 +274,7 @@
 					</DataGrid>
                 </Grid>
             </TabItem>
-            <TabItem Header="部队">
+            <TabItem Header="部隊">
                 <Grid Background="#FFE5E5E5">
                     <DataGrid x:Name="dgTroop" AlternationCount="2">
 						<DataGrid.ColumnHeaderStyle>
@@ -311,7 +303,7 @@
 					</DataGrid>
                 </Grid>
             </TabItem>
-            <TabItem Header="设施">
+            <TabItem Header="設施">
                 <Grid Background="#FFE5E5E5">
                     <DataGrid x:Name="dgFacility" AlternationCount="2">
 						<DataGrid.ColumnHeaderStyle>
@@ -340,7 +332,7 @@
 					</DataGrid>
                 </Grid>
             </TabItem>
-            <TabItem Header="俘虏">
+            <TabItem Header="俘虜">
                 <Grid Background="#FFE5E5E5">
                     <DataGrid x:Name="dgCaptive" AlternationCount="2">
 						<DataGrid.ColumnHeaderStyle>
@@ -398,9 +390,9 @@
 					</DataGrid>
                 </Grid>
             </TabItem>
-            <TabItem Header="部队事件">
+            <TabItem Header="部隊事件">
                 <Grid Background="#FFE5E5E5">
-                    <DataGrid x:Name="dgTroopEvent" AlternationCount="2" AutoGeneratingColumn="TroopEventTabHeaderDisplay">
+                    <DataGrid x:Name="dgTroopEvent" AlternationCount="2">
 						<DataGrid.ColumnHeaderStyle>
 							<Style TargetType="DataGridColumnHeader">
 								<Setter Property="FontWeight"  Value="Bold"/>
@@ -427,9 +419,9 @@
 					</DataGrid>
                 </Grid>
             </TabItem>
-            <TabItem Header="宝物">
+            <TabItem Header="寶物">
                 <Grid Background="#FFE5E5E5">
-                    <DataGrid x:Name="dgTreasure" AlternationCount="2" AutoGeneratingColumn="TreasureTabHeaderDisplay">
+                    <DataGrid x:Name="dgTreasure" AlternationCount="2">
 						<DataGrid.ColumnHeaderStyle>
 							<Style TargetType="DataGridColumnHeader">
 								<Setter Property="FontWeight"  Value="Bold"/>
@@ -456,9 +448,9 @@
 					</DataGrid>
                 </Grid>
             </TabItem>
-            <TabItem Header="列传">
+            <TabItem Header="列傳">
                 <Grid Background="#FFE5E5E5">
-                    <DataGrid x:Name="dgBiography" AlternationCount="2" AutoGeneratingColumn="BioTabHeaderDisplay">
+                    <DataGrid x:Name="dgBiography" AlternationCount="2">
 						<DataGrid.ColumnHeaderStyle>
 							<Style TargetType="DataGridColumnHeader">
 								<Setter Property="FontWeight"  Value="Bold"/>
@@ -486,7 +478,7 @@
                 </Grid>
             </TabItem>
             <!-- common -->
-            <TabItem Header="称号">
+            <TabItem Header="稱號">
                 <Grid Background="#FFE5E5E5">
                     <DataGrid x:Name="dgTitle" AlternationCount="2">
 						<DataGrid.ColumnHeaderStyle>
@@ -573,7 +565,7 @@
 					</DataGrid>
                 </Grid>
             </TabItem>
-            <TabItem Header="战法">
+            <TabItem Header="戰法">
                 <Grid Background="#FFE5E5E5">
                     <DataGrid x:Name="dgCombatMethod" AlternationCount="2">
 						<DataGrid.ColumnHeaderStyle>
@@ -602,7 +594,7 @@
 					</DataGrid>
                 </Grid>
             </TabItem>
-            <TabItem Header="效果">
+            <TabItem Header="影響">
                 <Grid Background="#FFE5E5E5">
                     <DataGrid x:Name="dgInfluence" AlternationCount="2">
 						<DataGrid.ColumnHeaderStyle>
@@ -631,7 +623,7 @@
 					</DataGrid>
                 </Grid>
             </TabItem>
-            <TabItem Header="效果类型">
+            <TabItem Header="影響類">
                 <Grid Background="#FFE5E5E5">
                     <DataGrid x:Name="dgInflunceKind" AlternationCount="2">
 						<DataGrid.ColumnHeaderStyle>
@@ -660,7 +652,7 @@
 					</DataGrid>
                 </Grid>
             </TabItem>
-            <TabItem Header="条件">
+            <TabItem Header="條件">
                 <Grid Background="#FFE5E5E5">
                     <DataGrid x:Name="dgCondition" AlternationCount="2">
 						<DataGrid.ColumnHeaderStyle>
@@ -689,7 +681,7 @@
 					</DataGrid>
                 </Grid>
             </TabItem>
-            <TabItem Header="条件类型">
+            <TabItem Header="條件類">
                 <Grid Background="#FFE5E5E5">
                     <DataGrid x:Name="dgConditionKind" AlternationCount="2">
 						<DataGrid.ColumnHeaderStyle>
@@ -718,7 +710,7 @@
 					</DataGrid>
                 </Grid>
             </TabItem>
-            <TabItem Header="事件效果">
+            <TabItem Header="事件影響">
                 <Grid Background="#FFE5E5E5">
                     <DataGrid x:Name="dgEventEffect" AlternationCount="2">
 						<DataGrid.ColumnHeaderStyle>
@@ -747,7 +739,7 @@
 					</DataGrid>
                 </Grid>
             </TabItem>
-            <TabItem Header="事件效果类型">
+            <TabItem Header="事件影響類">
                 <Grid Background="#FFE5E5E5">
                     <DataGrid x:Name="dgEventEffectKind" AlternationCount="2">
 						<DataGrid.ColumnHeaderStyle>
@@ -776,7 +768,7 @@
 					</DataGrid>
                 </Grid>
             </TabItem>
-            <TabItem Header="部队事件效果">
+            <TabItem Header="部隊事件影響">
                 <Grid Background="#FFE5E5E5">
                     <DataGrid x:Name="dgTroopEventEffect" AlternationCount="2">
 						<DataGrid.ColumnHeaderStyle>
@@ -805,7 +797,7 @@
 					</DataGrid>
                 </Grid>
             </TabItem>
-            <TabItem Header="部队事件效果类型">
+            <TabItem Header="部隊事件影響類">
                 <Grid Background="#FFE5E5E5">
                     <DataGrid x:Name="dgTroopEventEffectKind" AlternationCount="2">
 						<DataGrid.ColumnHeaderStyle>
@@ -834,7 +826,7 @@
 					</DataGrid>
                 </Grid>
             </TabItem>
-            <TabItem Header="设施类型">
+            <TabItem Header="設施類">
                 <Grid Background="#FFE5E5E5">
                     <DataGrid x:Name="dgFacilityKind" AlternationCount="2">
 						<DataGrid.ColumnHeaderStyle>
@@ -863,7 +855,7 @@
 					</DataGrid>
                 </Grid>
             </TabItem>
-            <TabItem Header="城池类型">
+            <TabItem Header="建築類">
                 <Grid Background="#FFE5E5E5">
                     <DataGrid x:Name="dgArchitectureKind" AlternationCount="2">
 						<DataGrid.ColumnHeaderStyle>
@@ -892,7 +884,7 @@
 					</DataGrid>
                 </Grid>
             </TabItem>
-            <TabItem Header="兵种类型">
+            <TabItem Header="兵種類">
                 <Grid Background="#FFE5E5E5">
                     <DataGrid x:Name="dgMilitaryKind" AlternationCount="2">
 						<DataGrid.ColumnHeaderStyle>
@@ -921,7 +913,7 @@
 					</DataGrid>
                 </Grid>
             </TabItem>
-            <TabItem Header="技巧类型">
+            <TabItem Header="技巧類">
                 <Grid Background="#FFE5E5E5">
                     <DataGrid x:Name="dgTechniques" AlternationCount="2">
 						<DataGrid.ColumnHeaderStyle>
