--- a/WorldOfTheThreeKingdomsEditor/MainWindow.xaml
+++ b/WorldOfTheThreeKingdomsEditor/MainWindow.xaml
@@ -13,6 +13,18 @@
         <CommandBinding Command="Paste" Executed="PasteCommandBinding_Executed"/>
         <CommandBinding Command="Delete" Executed="DeleteCommandBinding_Executed"/>
     </Window.CommandBindings>
+    <Window.Resources>
+        <ContextMenu x:Key="dgDictionMenu" >
+            <MenuItem  Header="新增关系" Click="MenuAddid_Click"   ></MenuItem>
+            <MenuItem  Header="编辑关系" Click="MenuEditid_Click"   ></MenuItem>
+            <MenuItem  Header="删除选中关系" Command="Delete" ></MenuItem>
+        </ContextMenu>
+        <ContextMenu x:Key="dgNomalMenu" >
+            <MenuItem  Header="新增此类" Click="MenuAdd_Click"   ></MenuItem>
+            <MenuItem  Header="编辑选中" Click="MenuEdit_Click"   ></MenuItem>
+            <MenuItem  Header="删除选中" Command="Delete" ></MenuItem>
+        </ContextMenu>
+    </Window.Resources>
     <DockPanel>
         <Menu DockPanel.Dock="Top">
             <MenuItem Header="檔案">
@@ -49,9 +61,17 @@
             <MenuItem Header="转换">
                 <MenuItem Header="剧本转excel" Click="btnScenariotoexcel_Click"/>
                 <Separator/>
-             </MenuItem>
+            </MenuItem>
             <MenuItem Header="其他">
                 <MenuItem Header="剧本信息" Click="btnsce_Click"/>
+
+                <!--<MenuItem Name="editRegions" Header="编辑地域" />
+                <MenuItem Name="editState" Header="编辑州域" />
+                <MenuItem Name="editRegions" Header="编辑编队" />
+                <MenuItem Name="editRegions" Header="编辑地域" />
+                <MenuItem Name="editRegions" Header="编辑地域" />
+                <MenuItem Name="editRegions" Header="编辑地域" />
+                <MenuItem Name="editRegions" Header="编辑地域" />-->
                 <Separator/>
                 <MenuItem Header="游戏Glo参数" Click="btnSets_Click"/>
                 <MenuItem Header="游戏Para参数" Click="btnSetsPara_Click"/>
@@ -63,41 +83,59 @@
             </StatusBarItem>
         </StatusBar>
         <TabControl x:Name="tabControl" Margin="10,10,10,10">
-            <TabItem Header="武將">
+            <TabItem Header="武将">
                 <Grid Background="#FFE5E5E5">
-                    <DataGrid x:Name="dgPerson"/>
+                    <DataGrid x:Name="dgPerson" CellStyle="{DynamicResource DataGridCellStyle1}"/>
                 </Grid>
             </TabItem>
-            <TabItem Header="父親">
+            <TabItem Header="父亲">
                 <Grid Background="#FFE5E5E5">
-                    <DataGrid x:Name="dgFatherId"/>
+                    <DataGrid x:Name="dgFatherId" ContextMenu="{StaticResource dgDictionMenu}" MouseDoubleClick="DgDictionary_MouseDoubleClick"  CellStyle="{DynamicResource DataGridCellStyle1}"/>
                 </Grid>
             </TabItem>
-            <TabItem Header="母親">
+            <TabItem Header="母亲">
                 <Grid Background="#FFE5E5E5">
-                    <DataGrid x:Name="dgMotherId"/>
+                    <DataGrid x:Name="dgMotherId" ContextMenu="{StaticResource dgDictionMenu}" MouseDoubleClick="DgDictionary_MouseDoubleClick"  CellStyle="{DynamicResource DataGridCellStyle1}"/>
                 </Grid>
             </TabItem>
             <TabItem Header="配偶">
                 <Grid Background="#FFE5E5E5">
-                    <DataGrid x:Name="dgSpouseId"/>
+                    <DataGrid x:Name="dgSpouseId" ContextMenu="{StaticResource dgDictionMenu}" MouseDoubleClick="DgDictionary_MouseDoubleClick"  CellStyle="{DynamicResource DataGridCellStyle1}"/>
                 </Grid>
             </TabItem>
-            <!--
-            <TabItem Header="義兄">
+            <TabItem Header="义兄弟">
                 <Grid Background="#FFE5E5E5">
-                    <DataGrid x:Name="dgBrotherId"/>
+                    <DataGrid x:Name="dgBrotherIds" ContextMenu="{StaticResource dgDictionMenu}" MouseDoubleClick="DgDictionary_MouseDoubleClick"  CellStyle="{DynamicResource DataGridCellStyle1}"/>
                 </Grid>
             </TabItem>
-            -->
-            <TabItem Header="建築">
+            <TabItem Header="所属人物">
                 <Grid Background="#FFE5E5E5">
-                    <DataGrid x:Name="dgArchitecture"/>
+                    <DataGrid x:Name="dgSuoshuIds" ContextMenu="{StaticResource dgDictionMenu}" MouseDoubleClick="DgDictionary_MouseDoubleClick"  CellStyle="{DynamicResource DataGridCellStyle1}"/>
                 </Grid>
             </TabItem>
-            <TabItem Header="勢力">
+            <TabItem Header="亲近人物">
                 <Grid Background="#FFE5E5E5">
-                    <DataGrid x:Name="dgFaction" FrozenColumnCount="2" CellEditEnding="DgFaction_CellEditEnding" LoadingRow="DgFaction_LoadingRow" MouseDoubleClick="DgFaction_MouseDoubleClick" CanUserAddRows="False">
+                    <DataGrid x:Name="dgCloseIds" ContextMenu="{StaticResource dgDictionMenu}" MouseDoubleClick="DgDictionary_MouseDoubleClick"  CellStyle="{DynamicResource DataGridCellStyle1}"/>
+                </Grid>
+            </TabItem>
+            <TabItem Header="厌恶人物">
+                <Grid Background="#FFE5E5E5">
+                    <DataGrid x:Name="dgHatedIds" ContextMenu="{StaticResource dgDictionMenu}" MouseDoubleClick="DgDictionary_MouseDoubleClick"  CellStyle="{DynamicResource DataGridCellStyle1}"/>
+                </Grid>
+            </TabItem>
+            <!--<TabItem Header="人物关系">
+                <Grid Background="#FFE5E5E5">
+                    <DataGrid x:Name="dgPersonRelations" ContextMenu="{StaticResource dgDictionMenu}" MouseDoubleClick="DgDictionary_MouseDoubleClick"  CellStyle="{DynamicResource DataGridCellStyle1}"/>
+                </Grid>
+            </TabItem>-->
+            <TabItem Header="建筑">
+                <Grid Background="#FFE5E5E5">
+                    <DataGrid x:Name="dgArchitecture" CellStyle="{DynamicResource DataGridCellStyle1}"/>
+                </Grid>
+            </TabItem>
+            <TabItem Header="势力">
+                <Grid Background="#FFE5E5E5">
+                    <DataGrid x:Name="dgFaction" FrozenColumnCount="2" MouseDoubleClick="DgFaction_MouseDoubleClick" CanUserAddRows="False" CellStyle="{DynamicResource DataGridCellStyle1}">
                         <DataGrid.ContextMenu>
                             <ContextMenu  DataContext="{Binding ElementName=dgFaction,Path=SelectedItems}">
                                 <MenuItem Name="menuEditfac" Header="编辑此势力" Click="Menueditfac_Click" ></MenuItem>
@@ -108,130 +146,145 @@
                     </DataGrid>
                 </Grid>
             </TabItem>
-            <TabItem Header="編隊">
+            <TabItem Header="编队">
                 <Grid Background="#FFE5E5E5">
-                    <DataGrid x:Name="dgMilitary"/>
+                    <DataGrid x:Name="dgMilitary" CellStyle="{DynamicResource DataGridCellStyle1}"/>
                 </Grid>
             </TabItem>
-            <TabItem Header="部隊">
+            <TabItem Header="部队">
                 <Grid Background="#FFE5E5E5">
-                    <DataGrid x:Name="dgTroop"/>
+                    <DataGrid x:Name="dgTroop" CellStyle="{DynamicResource DataGridCellStyle1}"/>
                 </Grid>
             </TabItem>
-            <TabItem Header="設施">
+            <TabItem Header="设施">
                 <Grid Background="#FFE5E5E5">
-                    <DataGrid x:Name="dgFacility"/>
+                    <DataGrid x:Name="dgFacility" CellStyle="{DynamicResource DataGridCellStyle1}"/>
                 </Grid>
             </TabItem>
-            <TabItem Header="俘虜">
+            <TabItem Header="俘虏">
                 <Grid Background="#FFE5E5E5">
-                    <DataGrid x:Name="dgCaptive"/>
+                    <DataGrid x:Name="dgCaptive" CellStyle="{DynamicResource DataGridCellStyle1}"/>
                 </Grid>
             </TabItem>
             <TabItem Header="事件">
                 <Grid Background="#FFE5E5E5">
-                    <DataGrid x:Name="dgEvent"/>
+                    <DataGrid x:Name="dgEvent" CellStyle="{DynamicResource DataGridCellStyle1}"/>
                 </Grid>
             </TabItem>
-            <TabItem Header="部隊事件">
+            <TabItem Header="部队事件">
                 <Grid Background="#FFE5E5E5">
-                    <DataGrid x:Name="dgTroopEvent"/>
+                    <DataGrid x:Name="dgTroopEvent" CellStyle="{DynamicResource DataGridCellStyle1}"/>
                 </Grid>
             </TabItem>
-            <TabItem Header="寶物">
+            <TabItem Header="宝物">
                 <Grid Background="#FFE5E5E5">
-                    <DataGrid x:Name="dgTreasure" />
+                    <DataGrid x:Name="dgTreasure" CellStyle="{DynamicResource DataGridCellStyle1}"/>
                 </Grid>
             </TabItem>
-            <TabItem Header="列傳">
+            <TabItem Header="列传">
                 <Grid Background="#FFE5E5E5">
-                    <DataGrid x:Name="dgBiography" />
+                    <DataGrid x:Name="dgBiography"  CellStyle="{DynamicResource DataGridCellStyle1}"/>
+                </Grid>
+            </TabItem>
+            <TabItem Header="地区">
+                <Grid Background="#FFE5E5E5">
+                    <DataGrid x:Name="dgRegion" ContextMenu="{StaticResource dgNomalMenu}" MouseDoubleClick="DgNomal_MouseDoubleClick" CellStyle="{DynamicResource DataGridCellStyle1}"/>
+                </Grid>
+            </TabItem>
+            <TabItem Header="州域">
+                <Grid Background="#FFE5E5E5">
+                    <DataGrid x:Name="dgState" ContextMenu="{StaticResource dgNomalMenu}" MouseDoubleClick="DgNomal_MouseDoubleClick"  CellStyle="{DynamicResource DataGridCellStyle1}"/>
                 </Grid>
             </TabItem>
             <!-- common -->
-            <TabItem Header="稱號">
+            <TabItem Header="称号">
                 <Grid Background="#FFE5E5E5">
-                    <DataGrid x:Name="dgTitle" />
+                    <DataGrid x:Name="dgTitle"  CellStyle="{DynamicResource DataGridCellStyle1}"/>
                 </Grid>
             </TabItem>
             <TabItem Header="技能">
                 <Grid Background="#FFE5E5E5">
-                    <DataGrid x:Name="dgSkill" />
+                    <DataGrid x:Name="dgSkill"  CellStyle="{DynamicResource DataGridCellStyle1}"/>
                 </Grid>
             </TabItem>
             <TabItem Header="特技">
                 <Grid Background="#FFE5E5E5">
-                    <DataGrid x:Name="dgStunt" />
+                    <DataGrid x:Name="dgStunt"  CellStyle="{DynamicResource DataGridCellStyle1}"/>
                 </Grid>
             </TabItem>
-            <TabItem Header="戰法">
+            <TabItem Header="战法">
                 <Grid Background="#FFE5E5E5">
-                    <DataGrid x:Name="dgCombatMethod" />
+                    <DataGrid x:Name="dgCombatMethod"  CellStyle="{DynamicResource DataGridCellStyle1}"/>
                 </Grid>
             </TabItem>
-            <TabItem Header="影響">
+            <TabItem Header="影响">
                 <Grid Background="#FFE5E5E5">
-                    <DataGrid x:Name="dgInfluence" />
+                    <DataGrid x:Name="dgInfluence"  CellStyle="{DynamicResource DataGridCellStyle1}"/>
                 </Grid>
             </TabItem>
-            <TabItem Header="影響類">
+            <TabItem Header="影响类">
                 <Grid Background="#FFE5E5E5">
-                    <DataGrid x:Name="dgInflunceKind" />
+                    <DataGrid x:Name="dgInflunceKind"  CellStyle="{DynamicResource DataGridCellStyle1}"/>
                 </Grid>
             </TabItem>
-            <TabItem Header="條件">
+            <TabItem Header="条件">
                 <Grid Background="#FFE5E5E5">
-                    <DataGrid x:Name="dgCondition" />
+                    <DataGrid x:Name="dgCondition"  CellStyle="{DynamicResource DataGridCellStyle1}"/>
                 </Grid>
             </TabItem>
-            <TabItem Header="條件類">
+            <TabItem Header="条件类">
                 <Grid Background="#FFE5E5E5">
-                    <DataGrid x:Name="dgConditionKind" />
+                    <DataGrid x:Name="dgConditionKind"  CellStyle="{DynamicResource DataGridCellStyle1}"/>
                 </Grid>
             </TabItem>
-            <TabItem Header="事件影響">
+            <TabItem Header="事件影响">
                 <Grid Background="#FFE5E5E5">
-                    <DataGrid x:Name="dgEventEffect" />
+                    <DataGrid x:Name="dgEventEffect"  CellStyle="{DynamicResource DataGridCellStyle1}"/>
                 </Grid>
             </TabItem>
-            <TabItem Header="事件影響類">
+            <TabItem Header="事件影响类">
                 <Grid Background="#FFE5E5E5">
-                    <DataGrid x:Name="dgEventEffectKind" />
+                    <DataGrid x:Name="dgEventEffectKind"  CellStyle="{DynamicResource DataGridCellStyle1}"/>
                 </Grid>
             </TabItem>
-            <TabItem Header="部隊事件影響">
+            <TabItem Header="部队事件影响">
                 <Grid Background="#FFE5E5E5">
-                    <DataGrid x:Name="dgTroopEventEffect" />
+                    <DataGrid x:Name="dgTroopEventEffect"  CellStyle="{DynamicResource DataGridCellStyle1}"/>
                 </Grid>
             </TabItem>
-            <TabItem Header="部隊事件影響類">
+            <TabItem Header="部队事件影响类">
                 <Grid Background="#FFE5E5E5">
-                    <DataGrid x:Name="dgTroopEventEffectKind" />
+                    <DataGrid x:Name="dgTroopEventEffectKind"  CellStyle="{DynamicResource DataGridCellStyle1}"/>
                 </Grid>
             </TabItem>
-            <TabItem Header="設施類">
+            <TabItem Header="设施类">
                 <Grid Background="#FFE5E5E5">
-                    <DataGrid x:Name="dgFacilityKind" />
+                    <DataGrid x:Name="dgFacilityKind"  CellStyle="{DynamicResource DataGridCellStyle1}"/>
                 </Grid>
             </TabItem>
-            <TabItem Header="建築類">
+            <TabItem Header="建筑类">
                 <Grid Background="#FFE5E5E5">
-                    <DataGrid x:Name="dgArchitectureKind" />
+                    <DataGrid x:Name="dgArchitectureKind"  CellStyle="{DynamicResource DataGridCellStyle1}"/>
                 </Grid>
             </TabItem>
-            <TabItem Header="兵種類">
+            <TabItem Header="兵种类">
                 <Grid Background="#FFE5E5E5">
-                    <DataGrid x:Name="dgMilitaryKind" />
+                    <DataGrid x:Name="dgMilitaryKind"  CellStyle="{DynamicResource DataGridCellStyle1}"/>
                 </Grid>
             </TabItem>
-            <TabItem Header="技巧類">
+            <TabItem Header="技巧类">
                 <Grid Background="#FFE5E5E5">
-                    <DataGrid x:Name="dgTechniques" />
+                    <DataGrid x:Name="dgTechniques"  CellStyle="{DynamicResource DataGridCellStyle1}"/>
                 </Grid>
             </TabItem>
-            <TabItem Header="官爵類">
+            <TabItem Header="官爵类">
                 <Grid Background="#FFE5E5E5">
-                    <DataGrid x:Name="dgGuanjue" />
+                    <DataGrid x:Name="dgGuanjue"  CellStyle="{DynamicResource DataGridCellStyle1}"/>
+                </Grid>
+            </TabItem>
+            <TabItem Header="地形类">
+                <Grid Background="#FFE5E5E5">
+                    <DataGrid x:Name="dgTerrainDetail" CanUserAddRows="False" CanUserDeleteRows="False"  CellStyle="{DynamicResource DataGridCellStyle1}"/>
                 </Grid>
             </TabItem>
         </TabControl>
