--- a/WorldOfTheThreeKingdomsEditor/NewEventWindow.xaml
+++ b/WorldOfTheThreeKingdomsEditor/NewEventWindow.xaml
@@ -58,9 +58,9 @@
         <Label Content="年" HorizontalAlignment="Left" Margin="260,44,0,0" VerticalAlignment="Top"/>
         <TextBox HorizontalAlignment="Left" x:Name="tbEndMonth" Height="23" Margin="282,48,0,0" TextWrapping="Wrap" Text="12" VerticalAlignment="Top" Width="33" RenderTransformOrigin="2.758,0.565"/>
         <Label Content="月" HorizontalAlignment="Left" Margin="315,44,0,0" VerticalAlignment="Top"/>
-        <Button Content="設置對話" x:Name="btnDialog" HorizontalAlignment="Left" Margin="10,76,0,0" VerticalAlignment="Top" Width="75"/>
-        <Button Content="設置選「是」對話" x:Name="btnYesDialog" HorizontalAlignment="Left" Margin="90,76,0,0" VerticalAlignment="Top" Width="109"/>
-        <Button Content="設置選「否」對話" x:Name="btnNoDialog" HorizontalAlignment="Left" Margin="204,76,0,0" VerticalAlignment="Top" Width="109"/>
+        <Button Content="設置對話" x:Name="btnDialog" Click="BtnDialog_Click" HorizontalAlignment="Left" Margin="10,76,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button Content="設置選「是」對話" x:Name="btnYesDialog" Click="BtnYesDialog_Click" HorizontalAlignment="Left" Margin="90,76,0,0" VerticalAlignment="Top" Width="109"/>
+        <Button Content="設置選「否」對話" x:Name="btnNoDialog" Click="BtnNoDialog_Click" HorizontalAlignment="Left" Margin="204,76,0,0" VerticalAlignment="Top" Width="109"/>
         <GroupBox Header="0" HorizontalAlignment="Left" x:Name="gbPerson0" Height="169" Margin="10,105,0,0" VerticalAlignment="Top" Width="399">
             <Grid Margin="0,0,-2,-2">
                 <Grid.ColumnDefinitions>
